Fix transitions on mobile

--- a/css/checkoutResponsive.css
+++ b/css/checkoutResponsive.css
@@ -601,9 +601,8 @@ body.checkout  > iframe {display: none;}
 .checkout .selected > td > div > label.full-line:before {position: absolute; top:58px;}
 .checkout #bopis_table td:first-child {width: 50px;}
 .checkout #bopis_table td:nth-child(2) {width: 100%; display: block; height: 135px;}
-.checkout #bopis_table td:last-child {position: absolute; right: -300px; opacity: 0; transition: all 1s; background: #ffe; padding: 20px; top: 0;}
+.checkout #bopis_table td:last-child {position: absolute; right: -300px; transition: right 1s; background: #ffe; padding: 20px; top: 0; -webkit-transform: translateZ(0);}
 .checkout #bopis_table td.slide:last-child {
-    opacity: 1;
     position: absolute;
     top: 0px;
     right: -80px;
@@ -869,7 +868,7 @@ form {position: relative;}
   .checkout #bopis_table td:first-child {width: 50px;}
   .checkout #bopis_table td:nth-child(2) {display: table-cell;}
   .checkout #bopis_table td:last-child,
-  .checkout #bopis_table td.slide:last-child {display: table-cell; width: 40%; position: relative; right: 0; opacity: 1; background: transparent; transition: all 0s;}
+  .checkout #bopis_table td.slide:last-child {display: table-cell; width: 40%; position: relative; right: 0; background: transparent; transition: right 1s; -webkit-transform: translateZ(0);}
   .opening-times {display: none;}
   .closer {display: none;}
   .checkout form#PaymentForm1 .billing_address_container a.button_secondary {float: right;}
